--- a/gtest/samples/CMakeLists.txt
+++ b/gtest/samples/CMakeLists.txt
@@ -3,75 +3,75 @@ add_library(samples
             sample1.cc
             sample2.cc
             sample4.cc)
-target_link_libraries(samples gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(samples gtest gtest_main ${THREAD_LINK_LIB})
 
 # Generate sample unit tests
 GTEST_CXX(sample1_unittest
           sample1_unittest.cc
           ""
           ""
-          "gtest_main;samples;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;samples;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample2_unittest
           sample2_unittest.cc
           ""
           ""
-          "gtest_main;samples;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;samples;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample3_unittest
           sample3_unittest.cc
           ""
           ""
-          "gtest_main;samples;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;samples;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample4_unittest
           sample4_unittest.cc
           ""
           ""
-          "gtest_main;samples;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;samples;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample5_unittest
           sample5_unittest.cc
           ""
           ""
-          "gtest_main;samples;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;samples;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample6_unittest
           sample6_unittest.cc
           ""
           ""
-          "gtest_main;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample7_unittest
           sample7_unittest.cc
           ""
           ""
-          "gtest_main;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample8_unittest
           sample8_unittest.cc
           ""
           ""
-          "gtest_main;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest_main;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample9_unittest
           sample9_unittest.cc
           ""
           ""
-          "gtest;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest;${THREAD_LINK_LIB}"
           "")
 
 GTEST_CXX(sample10_unittest
           sample10_unittest.cc
           ""
           ""
-          "gtest;${CMAKE_THREAD_LIBS_INIT}"
+          "gtest;${THREAD_LINK_LIB}"
           "")
