Ensure the output directories are not overwritten.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,13 @@ if (WIN32 AND BUILD_SHARED_LIBS)
 endif (WIN32 AND BUILD_SHARED_LIBS)
 
 # Direct all binary outputs to one directory
-set(LIBRARY_OUTPUT_PATH    ${CMAKE_CURRENT_BINARY_DIR}/bin CACHE INTERNAL "")
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/bin CACHE INTERNAL "")
+if(NOT LIBRARY_OUTPUT_PATH)
+  set(LIBRARY_OUTPUT_PATH    ${CMAKE_CURRENT_BINARY_DIR}/bin CACHE INTERNAL "")
+endif(NOT LIBRARY_OUTPUT_PATH)
+
+if(NOT EXECUTABLE_OUTPUT_PATH)
+  set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/bin CACHE INTERNAL "")
+endif(NOT EXECUTABLE_OUTPUT_PATH)
 
 # Set up protobuf include directories, and the export file
 set(PROTOBUF_INCLUDE_DIRS
