--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,16 @@ project(protobuf)
 set (PROTOBUF_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set (PROTOBUF_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
+IF (NOT PROTOBUF_INSTALL_BIN_DIR)
+  SET (PROTOBUF_INSTALL_BIN_DIR bin)
+ENDIF()
+IF (NOT PROTOBUF_INSTALL_LIB_DIR)
+  SET (PROTOBUF_INSTALL_LIB_DIR lib)
+ENDIF()
+IF (NOT PROTOBUF_INSTALL_EXPORT_NAME)
+  SET (PROTOBUF_INSTALL_EXPORT_NAME ProtobufTargets)
+ENDIF()
+
 if (NOT WIN32)
  OPTION(BUILD_SHARED_LIBS "Build shared protobuf library" ON)
 endif (NOT WIN32)
