--- a/src/config.h.cmake.in
+++ b/src/config.h.cmake.in
@@ -9,7 +9,7 @@
 #cmakedefine HASH_NAMESPACE @HASH_NAMESPACE@
 
 /* define if the compiler has hash_map */
-#cmakedefine01 HAVE_HASH_MAP
+#cmakedefine HAVE_HASH_MAP
 
 /* the name of <hash_map> */
 #cmakedefine HASH_MAP_CLASS @HASH_MAP_CLASS@
@@ -18,7 +18,7 @@
 #cmakedefine HASH_MAP_H <@HASH_MAP_H@>
 
 /* define if the compiler has hash_set */
-#cmakedefine01 HAVE_HASH_SET
+#cmakedefine HAVE_HASH_SET
 
 /* the name of <hash_set> */
 #cmakedefine HASH_SET_CLASS @HASH_SET_CLASS@
@@ -27,40 +27,40 @@
 #cmakedefine HASH_SET_H <@HASH_SET_H@>
 
 /* Define to 1 if you have the <dlfcn.h> header file. */
-#cmakedefine01 HAVE_DLFCN_H
+#cmakedefine HAVE_DLFCN_H
 
 /* Define to 1 if you have the <inttypes.h> header file. */
-#cmakedefine01 HAVE_INTTYPES_H
+#cmakedefine HAVE_INTTYPES_H
 
 /* Define to 1 if you have the <memory.h> header file. */
-#cmakedefine01 HAVE_MEMORY_H
+#cmakedefine HAVE_MEMORY_H
 
 /* Define if you have POSIX threads libraries and header files. */
-#cmakedefine01 HAVE_PTHREAD
+#cmakedefine HAVE_PTHREAD
 
 /* Define to 1 if you have the <stdint.h> header file. */
-#cmakedefine01 HAVE_STDINT_H
+#cmakedefine HAVE_STDINT_H
 
 /* Define to 1 if you have the <stdlib.h> header file. */
-#cmakedefine01 HAVE_STDLIB_H
+#cmakedefine HAVE_STDLIB_H
 
 /* Define to 1 if you have the <strings.h> header file. */
-#cmakedefine01 HAVE_STRINGS_H
+#cmakedefine HAVE_STRINGS_H
 
 /* Define to 1 if you have the <string.h> header file. */
-#cmakedefine01 HAVE_STRING_H
+#cmakedefine HAVE_STRING_H
 
 /* Define to 1 if you have the <sys/stat.h> header file. */
-#cmakedefine01 HAVE_SYS_STAT_H
+#cmakedefine HAVE_SYS_STAT_H
 
 /* Define to 1 if you have the <sys/types.h> header file. */
-#cmakedefine01 HAVE_SYS_TYPES_H
+#cmakedefine HAVE_SYS_TYPES_H
 
 /* Define to 1 if you have the <unistd.h> header file. */
-#cmakedefine01 HAVE_UNISTD_H
+#cmakedefine HAVE_UNISTD_H
 
 /* Enable classes using zlib compression. */
-#cmakedefine01 HAVE_ZLIB
+#cmakedefine HAVE_ZLIB
 
 /* Define to the sub-directory in which libtool stores uninstalled libraries.
    */
