Prevent config.h being picked up in wrong include dir
Reset INCLUDE_DIRECTORIES so protobuf is not polluted by ParaView
includes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ endif(NOT EXECUTABLE_OUTPUT_PATH)
 set(PROTOBUF_INCLUDE_DIRS
   "${PROTOBUF_SOURCE_DIR}/src"
   "${PROTOBUF_BINARY_DIR}/src")
-include_directories(${protobuf_INCLUDE_DIRS})
+set_directory_properties(PROPERTIES INCLUDE_DIRECTORIES "${protobuf_INCLUDE_DIRS}")
 set(PROTOBUF_EXPORTS_FILE "${PROTOBUF_BINARY_DIR}/PROTOBUF_EXPORTS.cmake")
 file(REMOVE "${PROTOBUF_EXPORTS_FILE}")
 
